# umani

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  去 AI 味提示词：一场集体幻觉.md  技术方案设计文档.md  视觉设计规范.md  需求文档.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tests.rs
src-tauri/src/commands/: article.rs  diff.rs  export.rs  llm.rs  mod.rs  onboarding.rs  skill.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: article.rs  mod.rs  skill.rs
src-tauri/src/prompts/: analyze_style.rs  diff_analyze.rs  generate.rs  mod.rs
src-tauri/src/services/: llm_service.rs
src/components/: Sidebar.css  Sidebar.tsx  Titlebar.css  Titlebar.tsx
src/locales/: en-US.json  i18n.ts  zh-CN.json
src/pages/: About.css  About.tsx  Editor.css  Editor.tsx  Settings.css  Settings.tsx  Skills.css  Skills.tsx  Workspace.css  Workspace.tsx
src/services/: api.ts  articleApi.ts  llmApi.ts  skillApi.ts
src/styles/: index.css
src/types/: index.ts
